--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Sergio & María</title>
   <meta name="author" content="Sergio García Mondaray" />
   <meta name="description" content="Sergio & María" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous"/>
   <link rel="stylesheet" href="./styles.css" />
 </head>
