--- a/index.html
+++ b/index.html
@@ -132,10 +132,8 @@
     Dinos si vas a venir y cuántos sois
   </p>
   <form>
-    <div>
-      <input type="text" name="nombre" placeholder="Nombre completo" required />
-      <input type="number" name="cantidad" placeholder="Cuántos" min="1" max="5" required />
-    </div>
+    <input type="text" name="nombre" placeholder="Nombre completo" required />
+    <input type="number" name="cantidad" placeholder="Cuántos vais a ser" min="1" max="5" required />
     <input type="tel" name="telefono" placeholder="Teléfono" required />
     <textarea name="comentarios" placeholder="¿Alergias? ¿Algún comentario adicional?"></textarea>
     <button type="submit">Enviar</button>
