--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
   <meta name="description" content="Sergio & María" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous"/>
+  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Handlee" rel="stylesheet"/>
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
 
-  <img id="logo" src="./images/logo.jpg" />
-
-
-  <p>
-    Nos casamos y queremos compartir ese día contigo.
-    <br/> Aquí encontrarás todo lo que necesitas saber.
-  </p>
-  <p>
-    <strong>Sergio & María</strong>
-  </p>
-  <p id="countdown">
-    Quedan <span>...</span>
-  </p>
+  <div id="header">
+    <img id="logo" src="./images/logo.jpg" />
+    <p>
+      Nos casamos y queremos compartir ese día contigo.
+      <br/> Aquí encontrarás todo lo que necesitas saber.
+    </p>
+    <p>
+      <strong>Sergio & María</strong>
+    </p>
+    <p id="countdown">
+      Quedan <span>...</span>
+    </p>
+  </div>
 
   <hr/>
 
