--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="author" content="Sergio García Mondaray" />
   <meta name="description" content="Sergio & María" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous"/>
-  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Handlee" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S"
+    crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Coming+Soon|Handlee" rel="stylesheet" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 
@@ -24,7 +25,8 @@
       <strong>Sergio & María</strong>
     </p>
     <p id="countdown">
-      Quedan <span>...</span>
+      Quedan
+      <span>...</span>
     </p>
   </div>
 
@@ -32,8 +34,9 @@
 
   <h3>La agenda del gran día</h3>
   <p>
-    Quedamos el sábado 27 de octubre de 2018<br/>
-    a las 13:00 en <a href="https://goo.gl/maps/um3WsGxen5H2" target="_blank">finca "La Moraleja"</a> (CUENCA)
+    Nos vemos el sábado 27 de octubre de 2018
+    <br/> a las 13:00 en
+    <a href="https://goo.gl/maps/um3WsGxen5H2" target="_blank">finca "La Moraleja"</a> (CUENCA)
   </p>
   <div class="block">
     <a>
@@ -42,58 +45,50 @@
       <i class="fas fa-angle-double-down"></i>
     </a>
     <div style="display: none">
-      <p>El día se dividirá en 3 partes</p>
+      <p>El día se dividirá en 4 partes:</p>
       <h5>1. Ceremonia</h5>
-      <p>Hola mundo, bla bla bl. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla blaa</p>
+      <p>Vamos a unirnos para siempre delante de la gente a la que queremos.</p>
+      <p>Queremos que sea algo sencillo y prometemos no aburrirte mucho.</p>
       <h5>2. Cóctel</h5>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bl. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla blaa</p>
+      <p>Qué mejor manera de abrir el estómago que con unas cervezas o vino y unos pinchos. Un buen momento para que os conozcáis.</p>
+      <p>Todo estará muy rico, pero no olvidéis dejar algo de hueco para el banquete.</p>
       <h5>3. Banquete</h5>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bla</p>
+      <p>Nadie se va a quedar con hambre. Pero la cantidad no es lo único importante. Vamos a disfrutar de un menú para chuparse
+        los dedos.</p>
+      <p>Coged fuerzas para hacer un poquito de ejercicio después, en la pista de baile.</p>
       <h5>4. Fiesta</h5>
-      <p>Hola mundo, bla bla bl. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla blaa</p>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bla</p>
+      <p>Por último queremos divertirnos, beber unas buenas copas y bailar. Puedes utilizar los comentarios del final o el formulario
+        de confirmación para sugerir tu música favorita.</p>
+      <p>Más tarde sacaremos algo de picoteo, que ya sabemos el hambre que da pasárselo bien.</p>
     </div>
   </div>
 
   <p>
-    Pondremos a vuestra disposición un autobús. <br/>
-    Más detalles aquí próximamente.
+    En el sitio hay parking gratuito y sin gorrilla.
+    <br/> Además pondremos un autobús desde Cuenca.
+    <br/> Vuelve próximamente aquí para ver más detalles.
   </p>
 
   <hr/>
 
   <h3>Qué llevar en tu maleta</h3>
   <p>
-    En Cuenca puede refrescar en otoño, así que prepárate ante posibles inclemencias con un abrigo y un paraguas.
-    Hemos pensado en todo y en caso de llover no vamos a mojarnos, pero mejor estar preparado.
+    En Cuenca puede refrescar en otoño, así que prepárate ante posibles inclemencias con un abrigo y un paraguas. Hemos pensado
+    en todo y en caso de llover no vamos a mojarnos, pero mejor estar preparado.
   </p>
-  <div class="block">
-    <a>
-      <i class="fas fa-angle-double-down"></i>
-      <small>ver más</small>
-      <i class="fas fa-angle-double-down"></i>
-    </a>
-    <div style="display: none">
-      <p>Hola mundo, bla bla bl. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla blaa</p>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bl. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla blaa</p>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bl. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla bla. Hola mundo, bla bla blaa</p>
-      <p>Hola mundo, bla bla bla</p>
-      <p>Hola mundo, bla bla bla</p>
-    </div>
-  </div>
+  <p>Aquí tienes la previsión de los próximos días:</p>
+  <a class="weatherwidget-io" href="https://forecast7.com/es/40d07n2d14/cuenca/" data-label_1="CUENCA" data-label_2="España">CUENCA España</a>
+  <script>
+    !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
+  </script>
+  <p>
+    Recuerda pasarte por aquí unos días antes de la boda para ver la información actualizada.
+  </p>
 
   <hr/>
 
   <h3>Hoteles</h3>
-  <p>
-    Aquí tienes algunos de los hoteles más populares de Cuenca
-  </p>
+  <p>Estamos hablando con algunos hoteles para ofrecerte ofertas. Vuelve próximamente aquí para ver más detalles.</p>
   <div class="block">
     <a>
       <i class="fas fa-angle-double-down"></i>
@@ -101,17 +96,17 @@
       <i class="fas fa-angle-double-down"></i>
     </a>
     <div style="display: none">
-      <p>bla bla bla bla bla bla bla bla</p>
-      <p>bla bla bla bla bla bla bla bla</p>
-      <p>bla bla bla bla bla bla bla bla</p>
+      Vuelve próximamente
     </div>
+
   </div>
+  <p>Recuerda que en <a href="https://www.booking.com/searchresults.es.html?label=gen173nr-1FCAEoggJCAlhYSDNYBGhGiAEBmAEKuAEHyAEM2AEB6AEB-AELkgIBeagCAw&sid=36939b7a6b4a37ba2acad10601595b85&sb=1&src=index&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Findex.es.html%3Flabel%3Dgen173nr-1FCAEoggJCAlhYSDNYBGhGiAEBmAEKuAEHyAEM2AEB6AEB-AELkgIBeagCAw%3Bsid%3D36939b7a6b4a37ba2acad10601595b85%3Bsb_price_type%3Dtotal%26%3B&ss=Cuenca&ssne=Cuenca&ssne_untouched=Cuenca&dest_id=-379455&dest_type=city&checkin_monthday=26&checkin_month=10&checkin_year=2018&checkout_monthday=28&checkout_month=10&checkout_year=2018&group_adults=1&group_children=0&no_rooms=1&from_sf=1" target="_blank">booking.com</a> también puedes econtrar muchas más opciones.</p>
 
   <hr/>
 
-  <h3>Peluquerías</h3>
+  <h3>Peluquería y estética</h3>
   <p>
-    Para l@s más coquet@s
+    Sabemos que todos sois muy guap@s, pero si necesitáis peluquería y maquillaje aquí tenéis una sugerencia.
   </p>
   <div class="block">
     <a>
@@ -120,9 +115,44 @@
       <i class="fas fa-angle-double-down"></i>
     </a>
     <div style="display: none">
-      <p>bla bla bla bla bla bla bla bla</p>
-      <p>bla bla bla bla bla bla bla bla</p>
-      <p>bla bla bla bla bla bla bla bla</p>
+      <p>L'esenzia nos ha ofertado lo siguiente para quien vaya de nuestra parte:</p>
+      <ul>
+        <li>
+          Peluquería
+          <ul>
+            <li>Brushing evento: 20€</li>
+            <li>Semirecogido: 35€</li>
+            <li>Recogido largo: 40€</li>
+            <li>Recogido medio: 35€</li>
+            <li>Recogido corto: 15€</li>
+            <li>Retoque peinado: 10€</li>
+          </ul>
+        </li>
+        <li>
+          Estética
+          <ul>
+            <li>Trataminto facial W&L: 30€</li>
+            <li>Prueba maquillaje: 25€</li>
+            <li>Esmaltado con top: 10€</li>
+            <li>Maquillaje evento: 35€</li>
+            <li>Maquillaje + Peinado boda: 50-80€</li>
+          </ul>
+        </li>
+        <li>
+          Desplazamiento
+          <ul>
+            <li>De 1 a 3 profesionales: 20€</li>
+            <li>De 4 a 6 profesionales: 40€</li>
+            <li>De 7 a 9 profesionales: 50€</li>
+            <li>Más de 10: S.P.</li>
+            <li>Exteriores con desplazamiento: 0.5€/Km</li>
+          </ul>
+        </li>
+      </ul>
+      <p>
+        Preguntad por Lucía Garrido Serrano. Teléfono/whatsapp: 667 665 226
+        <br/>Nota: decid que vais de parte de María, de la boda del 27 de Octubre.
+      </p>
     </div>
   </div>
 
@@ -130,13 +160,14 @@
 
   <h3>Confirma tu asistencia</h3>
   <p>
-    Dinos si vas a venir y cuántos sois
+    Dinos si vas a poder venir y, si traes acompañantes, cuántos vais a ser en total. Así podremos contar con vosotros y organizarlo
+    todo.
   </p>
   <form>
     <input type="text" name="nombre" placeholder="Nombre completo" required />
-    <input type="number" name="cantidad" placeholder="Cuántos vais a ser" min="1" max="5" required />
+    <input type="number" name="cantidad" placeholder="¿Cuántos vais a ser?" min="1" max="5" required />
     <input type="tel" name="telefono" placeholder="Teléfono" required />
-    <textarea name="comentarios" placeholder="¿Alergias? ¿Algún comentario adicional?"></textarea>
+    <textarea name="comentarios" rows="5" placeholder="¿Alergias? ¿Recomendaciones musicales para la fiesta? ¿Algún comentario adicional?"></textarea>
     <button type="submit">Enviar</button>
   </form>
 
@@ -144,8 +175,7 @@
 
   <h3>El regalo</h3>
   <p>
-    Si te hemos invitado es porque tu presencia es importante para nosotros.
-    No estás obligado a hacer ningún regalo. Sin embargo...
+    Te hemos invitado porque tu presencia es importante para nosotros. No estás obligado a hacer ningún regalo. Sin embargo...
   </p>
   <div class="block">
     <a>
@@ -154,8 +184,8 @@
       <i class="fas fa-angle-double-down"></i>
     </a>
     <div style="display: none">
-      <p>en caso de que quieras ayudarnos con los gastos de este día tan especial, puedes utilizar el siguiente número de cuenta:</p>
-      <p>ES00 0000 0000 0000 00000000</p>
+      <p>En caso de que quieras ayudarnos con los gastos de este día tan especial puedes utilizar el siguiente número de cuenta:</p>
+      <p>ES78 1465 01 00981724361172</p>
       <p>Titulares: Sergio García Mondaray, María Algarra Castillejos</p>
     </div>
   </div>
@@ -165,9 +195,11 @@
   <h3>Y por último… ¡A jugar!</h3>
   <p>
     ¿Estás listo?
-    <a href="http://play.mirandopacuenca.com" target="_blank">haz click aquí</a> para jugar
-    <br/>y hazte un nombre en el ranking. Tienes hasta octubre.
-    <br/>¡Habrá premios!
+    <a href="http://play.mirandopacuenca.com" target="_blank">haz click aquí</a> para divertirte con nuestro juego
+    <br/>y pon tu nombre bien alto en el ranking. Tienes hasta octubre.
+  </p>
+  <p>
+    ¡Habrá premios para los mejores!
   </p>
 
   <hr/>
