--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
   <hr/>
 
-  <h3>Hoteles</h3>
-  <p>Estamos hablando con algunos hoteles para ofrecerte ofertas. Vuelve próximamente aquí para ver más detalles.</p>
+  <h3>Alojamiento</h3>
+  <p>Tenemos algunas sugerencias para alojarte en Cuenca durante el fin de semana. Estarás como en casa.</p>
   <div class="block">
     <a>
       <i class="fas fa-angle-double-down"></i>
@@ -96,12 +96,37 @@
       <i class="fas fa-angle-double-down"></i>
     </a>
     <div style="display: none">
-      Vuelve próximamente
+      <p>
+        <h5>Opción 1: Casas rurales en la propia finca</h5>
+        Tenemos disponibles varias casitas para grupos (22€ por persona y noche):
+        <ul>
+          <li>3 x Para 4 parsonas</li>
+          <li>3 x Para 6 personas</li>
+          <li>1 x Para 12 personas</li>
+        </ul>
+        Contáctanos a nosotros directamente para reservarlas. Se irán asignando por orden de reserva.
+      </p>
+      <p>
+        <h5>Opción 2: Casita del balcón de Santiago</h5>
+        Son tres apartamentos (25€ por persona y noche):
+        <ul>
+          <li>Casita 1 (4 personas): estancia mín. 2 noches</li>
+          <li>Casita 2 (3 personas): estancia mín. 2 noches</li>
+          <li>Casita 3 (4 personas): sólo libre el sábado 27</li>
+        </ul>
+        Puedes ver más información <a href="https://www.airbnb.es/rooms/23433131" target="_blank">aquí</a> y <a href="https://www.airbnb.es/rooms/24133001" target="_blank">aquí</a>. Para reservas contactar directamente con Estrella (<a href="tel:653638449">653638449</a>) indicando que se trata de la boda de Sergio y María.
+      </p>
+      <p>
+        <h4>Opción 3: booking.com</h4>
+        Con estos códigos tendrás un 10% de descuento en cualquier reserva:
+        <ul>
+          <li><a href="https://booking.com/s/38_0/maralc05" target="_blank">MARALC05</a></li>
+          <li><a href="https://booking.com/s/38_0/sgmond38" target="_blank">SGMOND38</a></li>
+        </ul>
+      </p>
     </div>
 
   </div>
-  <p>Recuerda que en <a href="https://www.booking.com/searchresults.es.html?label=gen173nr-1FCAEoggJCAlhYSDNYBGhGiAEBmAEKuAEHyAEM2AEB6AEB-AELkgIBeagCAw&sid=36939b7a6b4a37ba2acad10601595b85&sb=1&src=index&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Findex.es.html%3Flabel%3Dgen173nr-1FCAEoggJCAlhYSDNYBGhGiAEBmAEKuAEHyAEM2AEB6AEB-AELkgIBeagCAw%3Bsid%3D36939b7a6b4a37ba2acad10601595b85%3Bsb_price_type%3Dtotal%26%3B&ss=Cuenca&ssne=Cuenca&ssne_untouched=Cuenca&dest_id=-379455&dest_type=city&checkin_monthday=26&checkin_month=10&checkin_year=2018&checkout_monthday=28&checkout_month=10&checkout_year=2018&group_adults=1&group_children=0&no_rooms=1&from_sf=1" target="_blank">booking.com</a> también puedes econtrar muchas más opciones.</p>
-
   <hr/>
 
   <h3>Peluquería y estética</h3>
