--- a/index.html
+++ b/index.html
@@ -64,10 +64,16 @@
   </div>
 
   <p>
-    En el sitio hay parking gratuito y sin gorrilla.
-    <br/> Además pondremos un autobús desde Cuenca.
-    <br/> Vuelve próximamente aquí para ver más detalles.
+    En el sitio hay parking gratuito y sin gorrilla. Pero si vas a beber no conduzcas.
   </p>
+
+  <p>
+    Para llegar a tiempo a la ceremonia hemos preparado <strong>un autobús que sale de Cuenca</strong>. El punto de encuentro es la calle <a href="https://goo.gl/maps/vJrgB625QGm">Paseo del Ferrocarril</a>, a las 12:00. Hay plazas limitadas así que llega pronto.
+  </p>
+  <p>
+    Para la vuelta habrá dos viajes, para que cojas el que prefieras dependiendo de lo animado que estés en la fiesta.
+  </p>
+  <p>También podrás usar el servicio de taxis de Cuenca para ir/volver.</p>
 
   <hr/>
 
