Open link in other tab

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </p>
 
   <p>
-    Para llegar a tiempo a la ceremonia hemos preparado <strong>un autobús que sale de Cuenca</strong>. El punto de encuentro es la calle <a href="https://goo.gl/maps/vJrgB625QGm">Paseo del Ferrocarril</a>, a las 12:00. Hay plazas limitadas así que llega pronto.
+    Para llegar a tiempo a la ceremonia hemos preparado <strong>un autobús que sale de Cuenca</strong>. El punto de encuentro es la calle <a target="_blank" href="https://goo.gl/maps/vJrgB625QGm">Paseo del Ferrocarril</a>, a las 12:00. Hay plazas limitadas así que llega pronto.
   </p>
   <p>
     Para la vuelta habrá dos viajes, para que cojas el que prefieras dependiendo de lo animado que estés en la fiesta.
