--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 
   <hr/>
 
+  <h3>Mapa</h3>
+
+  <p>Hemos preparado un sencillo mapa de Cuenca, con los puntos de interés más importantes para el fin de semana marcados.</p>
+
+  <p>Haz <a href="https://goo.gl/maps/rQnzUPSxLb72" target="_blank">click aquí</a> para verlo.</p>
+  
+  <hr/>
+
   <h3>La agenda del gran día</h3>
   <p>
     Nos vemos el sábado 27 de octubre de 2018
